<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/l_name"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:padding="10dp"
            android:text="@string/other_name"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/l_arrival_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/l_arrival_date"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/arrival_date"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/l_departure_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DepartureTv"
            app:layout_constraintTop_toBottomOf="@+id/l_name" />

        <TextView
            android:id="@+id/l_departure_date"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/departure_date"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DepartureTv"
            app:layout_constraintTop_toBottomOf="@+id/l_arrival_date" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@mipmap/ic_account_box_white_24dp"
            android:padding="10dp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ArrivalTv"
            app:layout_constraintEnd_toStartOf="@+id/l_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ArrivalTv"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:drawableLeft="@mipmap/ic_flight_land_white_24dp"
            android:padding="10dp"
            android:text="Arrival"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/DepartureTv"
            app:layout_constraintEnd_toStartOf="@+id/l_arrival_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <TextView
            android:id="@+id/DepartureTv"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:drawableLeft="@mipmap/ic_flight_takeoff_white_24dp"
            android:padding="10dp"
            android:text="Departure"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/l_departure_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ArrivalTv" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>